# avored-rust-cms

./: .env  .env.example  .env.ldap.example  .gitattributes  .gitignore  CARGO_SECURITY_ENHANCEMENT.md  COMMIT_SUMMARY.md  Cargo-backup.toml  Cargo.toml  Dockerfile  EXAMPLE.env  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile.security  README.md  SECURITY.md  api.http  audit.toml  avored.http  build.rs  deny.toml  package-lock.json  package.json  progress.md  security-report-20250717-120953.md  security_action_plan.md  security_report.md  tailwind.config.js  webpack.mix.js
.cargo/: config.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: FUNDING.yml  dependency-review-config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: commit-checks.yml  deploy.yml  frontend.yml  react-admin.yml  react-frontend.yml  rust-build.yml  rust-clippy.yml  rust-fmt.yml  rust.yml  security-audit.yml  zero-trust-security.yml
avored-tonic-axum/: Cargo.toml
avored-tonic-axum/src/: lib.rs  nest.rs  rest_grpc.rs  status.rs
avored_better_query/: Cargo.toml
avored_better_query/src/: lib.rs
avored_form_data/: Cargo.toml
avored_form_data/src/: lib.rs
avored_qs/: Cargo.toml
avored_qs/src/: lib.rs
backend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
backend/src/: App.vue  api.ts  main.ts  router.ts  style.css  vite-env.d.ts
config/: security.toml.example
data/avored.db/: 000065.sst  000068.sst  IDENTITY  LOG  LOG.old.1694130508300345  LOG.old.1694130571088440  LOG.old.1694130661002628  LOG.old.1694130707939757  LOG.old.1694131379259023  LOG.old.1694131393688685  LOG.old.1694132433903445  LOG.old.1694134254343113  LOG.old.1694134277509400  LOG.old.1694134302475806  LOG.old.1694134388794608  LOG.old.1694134438042883  LOG.old.1694134621999698  LOG.old.1694135149817312  LOG.old.1694135207816304  MANIFEST-000074  (+2 more)
docs/: LDAP_AUTHENTICATION.md  README.md  SECURITY.md  SECURITY_ADVISORIES.md  SECURITY_API.md  SECURITY_BEST_PRACTICES.md  SECURITY_CONFIGURATION.md  SECURITY_TROUBLESHOOTING.md  index.html  security_audit_schema.md
entity/: Cargo.toml
leptop-admin/: Cargo.toml  README.md  index.html  package-lock.json  package.json
locales/: en.json
migrations/: 1753999476__create_settings_table.surql  1753999477__create_admin_users_table.surql  1753999478__create_password_reset_table.surql  1753999479__create_roles_table.surql  1753999480__create_admin_user_role_table.surql  1753999481__create_components.surql  1753999482__create_pages.surql  1753999483__create_assets.surql  1753999484__create_collections.surql  1753999485__security_audit_tables.surql  1760537448__add_locale_to_admin_users.surql
proto/: admin_user.proto  asset.proto  auth.proto  cms.proto  content.proto  dashboard.proto  echo.proto  general.proto  misc.proto  security_audit.proto  setting.proto
react-admin/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
react-admin-ts/: .env.example  package-lock.json  package.json  tailwind.config.ts
react-front/: .env  .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
rust-api/: .env.example  .gitignore  Cargo.toml  api.http  package-lock.json  package.json  tailwind.config.js
rust-api/entity/: admin_users.rs  mod.rs  prelude.rs  roles.rs
rust-api/entity/src/: admin_users.rs  admin_users_roles.rs  mod.rs  prelude.rs  roles.rs
rust-api/locales/: en.json  en.yml  fr.json
rust-api/migration/: Cargo.toml
rust-api/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230705_082531_create_roles_table.rs
rust-api/migrations/2023-06-06-092338_create_posts/: up.sql
rust-api/migrations/2023-06-07-105425_admin_users/: down.sql  up.sql
rust-api/public/css/: app.css
rust-api/resources/css/: app.css
rust-api/src/: app_error.rs  config.rs  main.rs  models.rs  routes.rs  schema.rs
rust-api/src/handlers/: admin_login_handler.rs  admin_users_handler.rs  create_admin_user_handler.rs  create_role_handler.rs  delete_admin_user_handler.rs  get_admin_handler.rs  get_admin_login_handler.rs  get_admin_user_handler.rs  get_admin_users_handler.rs  get_role_handler.rs  home_handler.rs  login_admin_user_handler.rs  mod.rs  post_admin_login_handler.rs  put_admin_user_handler.rs  put_role_handler.rs  test_pp_handler.rs
rust-api/src/middleware/: require_authentication.rs
rust-api/src/repositories/: admin_user_repository.rs  mod.rs  post_repository.rs  role_repository.rs
rust-api/src/requests/: admin_user_create_request.rs  admin_user_list_request.rs  create_role_request.rs  login_admin_user_request.rs  mod.rs  roles_request.rs  update_admin_user_request.rs  update_role_request.rs
rust-api/src/responses/: admin_user_response.rs  login_admin_user_response.rs  mod.rs  roless_paginate_response.rs
rust-api/views/: 401.hbs  admin.hbs  template.hbs
rust-api/views/admin-users/: list.hbs
rust-api/views/auth/: login.hbs
rust-api/views/layout/: app.hbs  guest.hbs
scripts/: check-unmaintained.sh  security-check.sh  test-cicd-local.sh  test-security-components.sh
src/: avored_state.rs  bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  prelude.rs  routes.rs  state.rs
tests/: basic_security_test.rs  security_integration_tests.rs  security_property_tests.rs  security_regression_tests.rs  security_unit_tests.rs  timing_attack_tests.rs  zero_trust_security_tests.rs
ts-grpc-react-admin/: .env  .env.example  .env.production.local  .gitignore  README.md  buf.gen.yaml  package-lock.json  package.json  postcss.config.mjs
ts-grpc-react-front/: .env  .env.production.local  .gitignore  package-lock.json  package.json
ts-grpc-vite-admin/: .env.production  README.md  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
ts-grpc-vite-front/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
views/: admin.hbs  home.hbs  test-pp.hbs
(+1182 files in other folders)
