[package]
name = "avored_qs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_qs = "0.12.0"
urlencoding = "2.1.3"
