[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6.18"}
dotenvy = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"]}
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid", "serde_json", "chrono"] }
axum-macros = "0.3.7"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
argon2 = "0.5.0"
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.24", features = ["serde", "rustc-serialize"] } 
rand_core = { version = "0.6.4", features = ["std"]}
